--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-<<<<<<< HEAD
-    <link rel="icon" type="image/svg+xml" href="/frontend/src/assets/myImage.png" />
+    <link rel="icon" type="image/png" href="/src/assets/myImage.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-=======
-    <link rel="icon" type="image/svg+xml" href="/src/assets/ChatGPT Image Sep 27, 2025, 12_42_59 PM.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pastebin</title>
->>>>>>> 9fc7285bb19f73ba22a69e77e3be173836693507
   </head>
   <body>
     <div id="root"></div>
